<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="app_name">监控系统</string>
    <string name="login_name">BGI</string>
    <string name="hello_world">Hello world!</string>
    <string name="capture_scanning">扫描设备</string>
    <string name="menu_settings">设置</string>
    <string name="server_ip_settings">服务器设置</string>
    <string name="back_button">返回</string>
    <string name="finish_button">完成</string>
    <string name="menu_rec">Rec</string>
    <string name="menu_all">All</string>
    <string name="menu_more">More</string>
    <string name="menu_lock">Lock</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_home">主页</string>
    <string name="menu_surviel">监视</string>
    <string name="menu_search">搜索</string>
    <string name="menu_log">日志</string>
    <string name="header_tittle_home">主页</string>
    <string name="header_tittle_surveil">监视</string>
    <string name="header_tittle_search">搜索</string>
    <string name="header_tittle_settings">设置</string>
    <string name="device_info_id_tittle">账号:</string>
    <string name="device_info_location_tittle">地址:</string>
    <string name="device_info_status_tittile">状态:</string>
    <string name="device_info_boundary_tittile">范围:</string>
    <string name="devices_type_frige">DEV_FRIGE</string>
    <string name="device_info_description_tittle">描述:</string>
    <string name="title_activity_dev_detail">DevDetailActivity</string>
    <string name="device_info_type_tittle">Type:</string>
    <string name="frige_info_temp_tittle">温度:</string>
    <string name="dev_detail_log_description_tittle">描述:</string>
    <string name="dev_detail_log_time_tittle">时间:</string>
    <string name="dev_detail_log_starttime_tittle">开始时间:</string>
    <string name="dev_detail_log_endtime_tittle">结束时间:</string>
    <string name="dev_detail_log_starthandler_tittle">开始处理人:</string>
    <string name="dev_detail_log_endhandler_tittle">结束处理人:</string>
    <string name="dev_detail_log_startDesStatus_tittle">开始状态描述:</string>
    <string name="dev_detail_log_endDesStatus_tittle">结束状态描述:</string>
    <string name="header_tittle_dev_detail">设备信息</string>
    <string name="header_tittle_dev_district">设备区域</string>
    <string name="header_tittle_scanning_district">扫描区域</string>
    <string name="dev_log_type_error">LOG_ERROR</string>
    <string name="dev_log_type_warning">LOG_WARNING</string>
    <string name="settings_run_on_startup">settings_run_on_startup</string>
    <string name="settings_run_in_background">settings_run_in_background</string>
    <string name="settings_aid">settings_aid</string>
    <string name="settings_log_button_status">settings_log_button_status</string>
    <string name="settings_refresh_frequency">settings_refresh_frequency</string>
    <string name="settings_notification">settings_notification</string>
    <string name="settings_check_frequency">settings_check_frequency</string>
    <string name="settings_external_server_IP">settings_external_server_IP</string>
    <string name="settings_inward_server_IP">settings_inward_server_IP</string>
    <string name="settings_userID">settings_userID</string>
    <string name="settings_QRcode">settings_QRcode</string>
    <string name="settings_filename">temperature_minitor_settings</string>
    <string name="notification_tittle">通知</string>
    <string name="header_tittle_log">日志</string>
    <string name="listview_item_tag">listview_item_tag</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_district_grid_view">DistrictGridView</string>
    <string name="title_activity_district_list_view">DistrictListViewActivity</string>
    <string name="title_activity_capture">capture</string>
    <string name="title_activity_login_setting">LoginSettingActivity</string>
    <string name="title_activity_version_info">VersionInformation</string>
    <string name="district_map_tittle">长按选择区域</string>
    <string name="hum_info_humidity_tittle">湿度:</string>
    <string name="settings_only_measurement">settings_only_measurement</string>
	<string name="loading">正在加载···</string>
	<string name="usernameText">用户名</string>
	<string name="loginText">登录</string>
	<string name="passwordText">密码</string>
	<string name="Abnormal_log_Text">异常日志</string>
	<string name="Deal_log_Text">处理日志</string>
	<string name="app_list_header_refresh_last_update">上次更新于:%s</string>
	<string name="app_list_header_refresh_down">下拉刷新</string>
	<string name="app_list_footer_more">更多</string>
	<string name="app_list_footer_end">加载完成</string>
	<string name="app_list_header_loosen">松手刷新</string>
	<string name="app_list_footer_loading">正在加载...</string>
	<string name="Run_on_startup">开机启动</string>
	<string name="Whether_to_start_automatically">是否在开机时自动运行</string>
    <string name="Run_in_background">后台运行</string>
    <string name="Whether_to_run_in_the_background">是否在后台运行</string>
    <string name="Refresh_devices_status">刷新设备状态</string>
    <string name="Refresh_frequency">刷新频率</string>
    <string name="Notifications">通知</string>
    <string name="Whether_to_receive_notification">是否接收通知消息</string>
	<string name="Only_notificate_measurement_fault">仅通知测量故障</string>
	<string name="Only_measurement_fault">仅通知测量故障</string>
	<string name="Check_server_notification">后台服务的通知消息检测</string>
	<string name="Check_frequency">检测频率</string> 
	<string name="Refresh_frequency_Dialog_title">刷新频率</string>
	<string name="Check_frequency_Dialog_title">检测频率</string> 
	<string name="more_title">更多</string>
	<string name="QR_code_title">二维码扫描</string>
	<string name="QR_code_instruction">对未注册的设备进行扫描入库</string>
	<string name="system_title">系统设置</string> 
	<string name="surveil_title">监控设置</string> 
	<string name="notifications_title">通知设置</string>
	<string name="server_title">服务器设置</string>  
	<string name="external_server_IP_title">外网IP地址:</string>  
	<string name="external_server_IP_Dialog_title">输入您的外网IP地址：</string>  
	<string name="external_server_IP_summary">输入外网服务器IP地址</string>  
	<string name="inward_server_IP_title">内网IP地址:</string>  
	<string name="inward_server_IP_Dialog_title">输入您的内网IP地址：</string>  
	<string name="inward_server_IP_summary">输入内网服务器IP地址</string>  
	<string name="tdc_title">二维码扫描</string>  
	<string name="device_description">设备描述：</string>  
	<string name="device_type">设备类型：</string>  
	<string name="device_sn">序列号：</string>  
	<string name="device_upper_limit">上限：</string>  
	<string name="device_lower_limit">下限：</string>  
	<string name="device_offset">偏移量：</string>  
	<string name="device_next_button">入库</string>  
	<string name="device_change_room_button">选择房间</string>  
	<string name="device_again_button">重新扫描</string>  
	<string name="device_hold_button">保存</string>
	<string name="device_info_hint">请输入设备描述</string>
	<string name="device_info_hint_upper_limit">值上限</string>
	<string name="device_info_hint_lower_limit">值下限</string>
	<string name="release_to_refresh">释放刷新</string>
	<string name="pull_down_to_refresh">下拉刷新</string>
	<string name="pull_up_to_refresh">上拉刷新</string>
	<string name="footer_view_more">更多</string>
	<string name="no_data">没有数据</string>
	<string name="pull_down_refresh">下拉刷新</string>
	<string name="no_net">没有网络</string>
	<string name="empty_onclick">点击屏幕 重新加载</string>
	<string name="RadioButtonExternalNet">外网</string>
	<string name="RadioButtonInwardNet">内网</string>
	<string name="textview_version_num">版本号</string>
	<string name="button_check_update">检测更新</string>
	<string name="button_version_info">版本说明</string>
	<string name="Capture_room_hint">请选择房间</string>

</resources>