<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/gegn_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/gene_logo" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <com.refeved.monitor.ui.CustomImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_editview"
            android:src="@drawable/wk03" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_editview"
            android:ems="10"
            android:hint="@string/usernameText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded_editview"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/RadioGroupNetSelect"
            android:layout_width="240dp"
            android:layout_height="35dp"
        	android:layout_marginTop="170dp"
        	android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RadioButtonInwardNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/RadioButtonInwardNet" />

            <RadioButton
                android:id="@+id/RadioButtonExternalNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/RadioButtonExternalNet" />
        </RadioGroup>

        <Button
            android:id="@+id/button1"
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:background="@drawable/color_button"
            android:shadowColor="@color/blue"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/loginText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/login_setting_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/server_ip_settings"
            android:textColor="@color/transparent_gray"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>